RESOLVED FIXED224086
REGRESSION(r272469) QuickLook previews broken in some places on macOS
https://bugs.webkit.org/show_bug.cgi?id=224086
Summary REGRESSION(r272469) QuickLook previews broken in some places on macOS
Alex Christensen
Reported 2021-04-01 16:20:49 PDT
REGRESSION(r272469) QuickLook previews broken in some places on macOS
Attachments
Patch (6.59 KB, patch)
2021-04-01 16:23 PDT, Alex Christensen
ews-feeder: commit-queue-
Alex Christensen
Comment 1 2021-04-01 16:23:46 PDT
Alex Christensen
Comment 2 2021-04-01 16:24:18 PDT
EWS
Comment 3 2021-04-01 17:38:55 PDT
Committed r275395: <https://commits.webkit.org/r275395> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424960 [details].
Radar WebKit Bug Importer
Comment 4 2021-04-01 17:39:49 PDT
Note You need to log in before you can comment on or make changes to this bug.