REGRESSION(r272469) QuickLook previews broken in some places on macOS https://bugs.webkit.org/show_bug.cgi?id=224086

Patch by Alex Christensen <achristensen@webkit.org> on 2021-04-01
Reviewed by Tim Horton.

Source/WebCore:

The linked-on-or-after check saves us from most compatibility problems, but QuickLook on macOS was broken.
It uses schemes x-apple-ql-id and x-apple-ql-magic, which we allow to continue to have non-null origins.
Covered by API tests.

* page/SecurityOrigin.cpp:
(WebCore::shouldTreatAsUniqueOrigin):

Tools:

* TestWebKitAPI/Tests/WebCore/SecurityOrigin.cpp:
(TestWebKitAPI::TEST_F):

Canonical link: https://commits.webkit.org/236059@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275395 268f45cc-cd09-0410-ab3c-d52691b4dbfc